RS-232 Mounter: migrated to FIFO, added stub for write

--- a/pentevo/tools/rs232mnt/rs232mnt/rs232mnt.vcxproj
+++ b/pentevo/tools/rs232mnt/rs232mnt/rs232mnt.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="fifo.cpp" />
     <ClCompile Include="rs232mnt.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
