--- a/pentevo/tools/rs232mnt/rs232mnt/rs232mnt.vcxproj.filters
+++ b/pentevo/tools/rs232mnt/rs232mnt/rs232mnt.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="rs232mnt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="fifo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
