Unreal: fixed DMA bug 2

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -327,7 +327,7 @@ Fq=44100        ; check maximum sampling rate in your soundcard manual
                 ; setting freq not supported by hardware
                 ; will cause resampling and degrade quality and performance
 
-GSType=z80     ; BASS, Z80 or NONE
+GSType=BASS     ; BASS, Z80 or NONE
 GSReset=1       ; reinit GS on reset
 
 SD=1            ; enable/disable soundrive
