Unreal: added read-only bit for virtual ROM, improved Lock128 Auto, added Orel' BK-08 LSY256 model (stub)

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -9,12 +9,9 @@ ShareCPU=1      ; 1 - only for fast CPUs (incompatible with SoundDrv=none)
 ;
 HighPriority=1  ; boost process priority, disabled on ShareCPU=0
 ;
-; high memory: PENTAGON, SCORPION, PROFSCORP, PROFI, ATM450, ATM710, KAY, ATM3, TSL
+; high memory: PENTAGON, SCORPION, PROFSCORP, PROFI, ATM450, ATM710, KAY, ATM3, TSL, LSY
 HIMEM=TSL
-; HIMEM=PENTAGON
-; HIMEM=ATM3
-; memory size, KB. pentagon,atm2: 128/256/512/1024, scorp,kay: 256/1024,
-; ATM450: 512/1024, profi: 1024 only
+; memory size, KB
 RAMSize=4096
 
 ULAPLUS=1
@@ -493,6 +490,9 @@ KAY=rom\kay1024.rom
 
 ; TS-config
 TSL=rom\zxevo.rom
+
+; LSY256
+LSY=rom\lsy256.rom
 
 ; you can create own 64K-ROMSET, naming ini section [ROM.my_own_set]
 ; for empty ROMSET, single-file large ROM used (accordingly to memory model)
