WC: added setup (F9), added new functions into plug-in system (MNG0_PL, MNG8_PL, MNG0VPL, MNG8VPL), some other improvements.

--- a/pentevo/soft/WC/exe/wc.ini
+++ b/pentevo/soft/WC/exe/wc.ini
@@ -2,7 +2,7 @@ Wild Commander configuration file v0.2
 
 [SETUP]
 CPU_FREQ=2; 0=3.5MHz, 1=7MHz, 2=14MHz, 3=14+MHz (cache always off)
-SPIR=0; 0-disabled, 1-enabled (get positions from RAM)
+SPIR=1; 0-disabled, 1-enabled (remember dirs in panels)
 
 [PLUGINS]
 MOUNTER .WMF
@@ -25,4 +25,4 @@ DRV=1; 0-IDEnemo, 1-SDzc, 2-SDngs
 INFO=1; file info (0 - disable, 1 - enable)
 
 ;this file and all plug-ins must be placed into WC folder (in root dir of Boot-Device)
-;данный файл и все плагины нужно разместить в папке WC (в корне загрузочного устройства, которое выбирается в ts-bios'e)
+;данный файл и все плагины нужно разместить в папке WC (в корне загрузочного устройства, которое выбирается в ts-bios'e [SS+F12])
