WC: added new screensaver (PlasmaTwist by VBI)!

--- a/pentevo/soft/WC/exe/WC/wc.ini
+++ b/pentevo/soft/WC/exe/WC/wc.ini
@@ -14,7 +14,7 @@ VIDEO_PL.WMF
 BMPV    .WMF
 ILBMVIEW.WMF
 TAPM    .WMF
-SCRSAVER.WMF
+PLASMATW.WMF;SCRSAVER.WMF
 
 [LPANEL]
 DRV=1; 0-IDEnemo, 1-SDzc, 2-SDngs
