--- a/pentevo/fpga/current/quartus/top.qsf
+++ b/pentevo/fpga/current/quartus/top.qsf
@@ -30,7 +30,7 @@ set_global_assignment -name ORIGINAL_QUARTUS_VERSION 6.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:03:44  NOVEMBER 07, 2009"
 set_global_assignment -name LAST_QUARTUS_VERSION 9.0
 set_global_assignment -name MESSAGE_SUPPRESSION_RULE_FILE top.srf
-set_global_assignment -name SMART_RECOMPILE OFF
+set_global_assignment -name SMART_RECOMPILE ON
 
 # Pin & Location Assignments
 # ==========================
@@ -190,7 +190,7 @@ set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name SLOW_SLEW_RATE ON
 set_global_assignment -name AUTO_PACKED_REGISTERS NORMAL
 set_global_assignment -name FIT_ONLY_ONE_ATTEMPT OFF
-set_global_assignment -name SEED 1
+set_global_assignment -name SEED 2
 set_global_assignment -name ROUTER_TIMING_OPTIMIZATION_LEVEL MINIMUM
 set_global_assignment -name PLACEMENT_EFFORT_MULTIPLIER 1.0
 set_global_assignment -name ROUTER_EFFORT_MULTIPLIER 1.0
@@ -352,3 +352,4 @@ set_location_assignment PIN_205 -to rd[14]
 set_location_assignment PIN_206 -to rd[1]
 set_location_assignment PIN_207 -to rd[15]
 set_location_assignment PIN_208 -to rd[0]
+set_global_assignment -name SAVE_DISK_SPACE OFF
