WC: added sorting by ext and size, updated TAP Mounter plug-in (SNA48/128k launching).

--- a/pentevo/soft/WC/exe/WC/wc.ini
+++ b/pentevo/soft/WC/exe/WC/wc.ini
@@ -20,12 +20,13 @@ PLASMATW.WMF;SCRSAVER.WMF
 [LPANEL]
 DRV=1; 0-IDEnemo, 1-SDzc, 2-SDngs
 INFO=1; file info (0 - disable, 1 - enable)
-CSORT=1; sorting (0 - off, 1 - by name)
+CSORT=2; sorting (0 - off, 1 - by name, 2 - by ext, 3 - by size)
 
 [RPANEL]
 DRV=1; 0-IDEnemo, 1-SDzc, 2-SDngs
 INFO=1; file info (0 - disable, 1 - enable)
-CSORT=1; sorting (0 - off, 1 - by name)
+CSORT=2; sorting (0 - off, 1 - by name, 2 - by ext, 3 - by size)
+
 
 ;this file and all plug-ins must be placed into WC folder (in root dir of Boot-Device)
 ;данный файл и все плагины нужно разместить в папке WC (в корне загрузочного устройства, которое выбирается в ts-bios'e [SS+F12])
