Unreal: added Video DAC version detect and emulation, added two types of ULA+, updated WC to version 0.62

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -2,7 +2,6 @@
 
 UNREAL=0.37.9   ; make sure you don't have old INI version
 
-
 [MISC]
 ; give idle timeslices to other applications
 ShareCPU=1      ; 1 - only for fast CPUs (incompatible with SoundDrv=none)
@@ -14,19 +13,28 @@ HIMEM=TSL
 ; memory size, KB
 RAMSize=4096
 
-ULAPLUS=1
+; ULA+: NONE, TYPE1 (Blue is 000 011 101 111), TYPE2 (Blue is 000 011 100 111)
+ULAPLUS=TYPE1
 
-OUT_C_0 = 255
+; ZX-Evo Video DAC resolution: NONE, 3BIT, 4BIT, 5BIT
+TS_VDAC=5BIT
+
+; OUT (C), 0 value
+OUT_C_0=255
 
 TapeTraps=1
 ; start tape on ROM load routine
+
 TapeAutoStart=1
 ; cmos on DFF7/BFF7: none, DALLAS (pc chip), or 512Bu1 (russian chip)
+
 CMOS=DALLAS
 ; cache size: 16,32 or 0 - disabled. no effect for ATM-4.50 model
+
 Cache=0
 ; bits, that can't be updated by Z80 and cleared by RESET (decimal value)
 ; ex: mask=3 - disable HWMC and 512x192, mask=255 - disable all additional hardware
+
 EFF7mask=0      ; EFF7mask=0 - all pentagon features on
 ;
 SMUC=0          ; enable/disable NVRAM + CMOS RTC
