Tools: migrated to static link

--- a/pentevo/tools/bin2case/src/bin2case/bin2case.vcxproj
+++ b/pentevo/tools/bin2case/src/bin2case/bin2case.vcxproj
@@ -68,6 +68,7 @@
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
