--- a/pentevo/tools/spgbld/src/spgbld/spgbld.vcxproj
+++ b/pentevo/tools/spgbld/src/spgbld/spgbld.vcxproj
@@ -71,6 +71,7 @@
       <AssemblerOutput>All</AssemblerOutput>
       <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
