--- a/pentevo/tools/bin2defb/src/bin2defb/bin2defb.vcxproj
+++ b/pentevo/tools/bin2defb/src/bin2defb/bin2defb.vcxproj
@@ -68,6 +68,7 @@
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
