Unreal: Fixed w0_we in MemConfig register. Added MENU key.

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -638,7 +638,7 @@ RAR=rar e -y "%s"
 ;  TAB   Q   W   E   R   T   Y   U   I   O   P   LB    RB               DEL END  PGDN        N7    N8    N9   GRADD
 ;  CAPS  A   S   D   F   G   H   J   K   L   COL QUOTE ENTER                                 N4    N5    N6
 ;  LSHIFT Z  X   C   V   B   N   M COMMA POINT SLASH RSHIFT BACKSL           UP              N1    N2    N3   GRENTER
-;  LCONTROL LALT              SPACE                  RALT RCONTROL     LEFT DOWN RIGHT       N0          NP
+;  LCONTROL LALT              SPACE             RALT MENU RCONTROL     LEFT DOWN RIGHT       N0          NP
 
 ; LMB,RMB,MMB - mouse buttons
 ; MWU,MWD - mouse wheel up/down
