Unreal: changed video saving presets

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -259,16 +259,32 @@ ffmpeg.newconsole=1
 ; -b:a 320k          - set bitrate for audio
 ; -b:v 2800k         - set bitrate for video
 
-;# mp3:320kbps, x264:baseline,10
+;# mp3:320kbps, x264:baseline,10, fast
 ffmpeg.parm=-c:a libmp3lame -b:a 320k -af volume=3.000000 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -ss 00:00:00.500
 ffmpeg.vout=video#.avi
 
-;# mp3:320kbps, x264:lossless
-;ffmpeg.parm=-c:a libmp3lame -b:a 320k -af volume=3.000000 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -crf 0 -ss 00:00:00.500
+;# aac:256kbps, x264:baseline,10, fast
+;ffmpeg.parm=-c:a libvo_aacenc -b:a 256k -af volume=3.000000 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -ss 00:00:00.500
 ;ffmpeg.vout=video#.avi
 
-;# wav, x264:lossless
-;ffmpeg.parm=-c:a copy -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -crf 0 -ss 00:00:00.500
+;# aac:256kbps, x264:baseline,10, slow
+;ffmpeg.parm=-c:a libvo_aacenc -b:a 256k -af volume=3.000000 -c:v libx264 -pix_fmt yuvj420p -preset:v veryslow -profile:v baseline -crf 10 -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# aac:256kbps, x264:lossless, fast
+;ffmpeg.parm=-c:a libvo_aacenc -b:a 256k -af volume=3.000000 -c:v libx264 -pix_fmt rgb24 -preset:v ultrafast -qp 0 -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# aac:256kbps, x264:lossless, slow
+;ffmpeg.parm=-c:a libvo_aacenc -b:a 256k -af volume=3.000000 -c:v libx264 -pix_fmt rgb24 -preset:v veryslow -qp 0 -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# wav, x264:lossless, fast
+;ffmpeg.parm=-c:a copy -c:v libx264 -pix_fmt yuvj420p -preset:v ultrafast -qp 0 -ss 00:00:00.500
+;ffmpeg.vout=video#.avi
+
+;# wav, x264:lossless, slow
+;ffmpeg.parm=-c:a copy -c:v libx264 -pix_fmt yuvj420p -preset:v veryslow -qp 0 -ss 00:00:00.500
 ;ffmpeg.vout=video#.avi
 
 ;# uncompressed
