Unreal: Added optional memory initialization for loading spg

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -53,6 +53,9 @@ Help=help_eng.html
 ; directory with zx-files
 DIR=.
 
+; SPG Memory init: 0 - none, 1 - random data fill, 2 - zero data fill
+SPGMemInit=0
+
 ; Kondrat'yev ISA modem emulated through windows modem on COM-port
 ; if you own internal PCI modem, use "settings/input" dialog to find out port
 Modem=NONE      ; NONE or COM1-COM255
